sumo/tests/duarouter/routes/style2_input/errors/vehicle_empty_departpos/errors.duarouter
Error: Attribute 'departPos' in definition of a vehicle is empty.
Error: Invalid departPos definition for vehicle '0';
 must be one of ("random", "random_free", "free", "base", "pwagSimple", "pwagGeneric", "maxSpeedGap", or a float)
Quitting (on error).
